--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,6 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-
 .searchBar{
   display: flex;
   justify-content: center;
@@ -135,7 +134,7 @@ code {
 
 .titletodo {
   width: 100%;
-  background-color: red;
+  /* background-color: red; */
   display: flex;
   justify-content: center;
 }
@@ -160,6 +159,17 @@ code {
   background-color: rgb(62, 85, 63);
 }
 .todobody{
+  background-color: white;
+  color: black;
+  width: 100%;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+.todobodyDarkmode{
+  background-color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
   width: 100%;
   align-items: center;
   display: flex;
@@ -177,6 +187,11 @@ font-size: 1.3vw;
 }
 .taskdata p{
   font-size: 1vw;
+}
+.mode{
+  margin-top: 1.7vw;
+  margin-left: 1vw;
+  font-size: 1.2vw;
 }
 @media (max-width: 500px) {
   .container2 {
@@ -203,4 +218,11 @@ font-size: 1.3vw;
   font-size: 5vw;
   padding-left: 3vw;
 }
+.mode {
+  margin-top: 7.8vw;
+  margin-left: 7vw;
+  font-size: 5.2vw;
 }
+}
+
+
