--- a/src/index.css
+++ b/src/index.css
@@ -112,18 +112,22 @@ code {
   justify-content: center;
 }
 .head{
-  width: 50%;
+  padding-left: 7vw;
+  width: 42%;
   margin-top: 1vw;
   text-align: center;
   font-size: 2vw;
   font-weight: 700;
 }
-.todo{
+.todo {
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
   margin-top: 1.5vw;
   margin-left: 1vw;
   margin-right: 0;
   right: 0;
   text-align: center;
+  padding: .5vw .7vw;
+  border-radius: 7px;
 }
 .navLink {
   text-decoration: none; 
@@ -193,15 +197,19 @@ font-size: 1.3vw;
   margin-left: 1vw;
   font-size: 1.2vw;
 }
-.slide-container{
+.slider-container {
   display: flex;
+  flex-direction: column; /* image ke niche dots aa sake */
   justify-content: center;
+  align-items: center;
   position: relative;
 }
-.slide-container img{
+
+.slider-container img {
   height: 25vw;
   width: 60vw;
   border-radius: 10px;
+  object-fit: cover;
 }
 .left-btn, .right-btn{
   position: absolute;
@@ -259,6 +267,35 @@ align-items: center;
       border-radius: 10px;
       flex-direction: column;
 }
+.dots {
+  top: 95%;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  position: absolute;   /* 🔑 important */
+  z-index: 10;          /* upar dikhne ke liye */
+}
+
+.dot {
+  height: 7px;
+  width: 7px;
+  border-radius: 50%;
+  background-color: #c4c4ec;
+  cursor: pointer;
+  transition: transform 0.3s ease, background-color 0.3s ease;
+}
+
+.dot:hover {
+  transform: scale(1.2);
+  background-color: #777;
+}
+
+.dot.active {
+  background-color: rgb(48, 44, 37);
+  transform: scale(.7);
+}
+
+
 @media (max-width: 500px) {
   .container2 {
     width: 85%;
@@ -304,6 +341,58 @@ align-items: center;
 .card-detaails {
   width: 85%;
 }
+.searchBar input {
+  width: 200px;
+}
+.slider-container img{
+    height: 32vw;
+    width: 76vw;
+ }
+ .dots {
+  top: 92%;
+ }
+ .dot {
+  height: 5px;
+  width: 5px;
+ }
+ .meals-data{
+  display: flex;
+    align-items: center;
+    justify-content: center;
+ }
+ .meals img{
+    width: 100%;
+    height: 76px;
+ }
+ .mealImg button {
+  width: 64px;
+  font-size: 7px;
+}
+.mealImg p{
+    font-size: 2.5vw;
+    margin-top: 1px;
+    margin-bottom: 1px;
+}
+.mealImg {
+  width: 90px;
+  height: 130px;
+}
+ .head {
+  margin-top: 4vw;
+  font-size: 4vw;
+ }
+ .navLink {
+  display: flex;
+  align-items: center;
+  border-radius: 5px;
+  padding: 1vw;
+  font-size: 10px;
+}
+ .todo {
+  /* text-decoration: dashed; */
+  margin-top: 3.5vw;
+  margin-left: 4vw;
+ }
 }
 
 
